Fix title alignment

--- a/app/assets/stylesheets/lending/item.scss
+++ b/app/assets/stylesheets/lending/item.scss
@@ -36,8 +36,6 @@ section {
 @media (min-width: $media-breakpoint-width) {
   section {
     &.item {
-      margin-left: auto;
-      margin-right: auto;
       width: $media-breakpoint-width;
       max-width: $media-breakpoint-width;
 
@@ -48,6 +46,7 @@ section {
         thead {
           th {
             grid-column: 1 / 3;
+            text-align: left;
           }
         }
 
